More refactoring towards modules/webpacking

--- a/stresstest.html
+++ b/stresstest.html
@@ -12,6 +12,6 @@
 
         <script src="scripts/jquery.min.js"></script>
 		<script src="scripts/dat.gui.min.js"></script>
-		<script src="dist/test6.bundle.js"></script>
+		<script src="dist/stresstest.bundle.js"></script>
 	</body>
 </html>
