--- a/stresstest.html
+++ b/stresstest.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
 
-        <script src="scripts/jquery.min.js"></script>
-		<script src="scripts/dat.gui.min.js"></script>
+        <script src="scripts/dependencies/jquery.min.js"></script>
+		<script src="scripts/dependencies/dat.gui.min.js"></script>
 		<script src="dist/stresstest.bundle.js"></script>
 	</body>
 </html>
