changed module structure - now all src is compiled into bundle and can be used by normal scripts by accessing window.Network

--- a/pickingtest.html
+++ b/pickingtest.html
@@ -10,8 +10,10 @@
 	</head>
 	<body>
 
-        <script src="scripts/dependencies/jquery.min.js"></script>
-		<script src="scripts/dependencies/dat.gui.min.js"></script>
-		<script src="dist/pickingtest.bundle.js"></script>
+        <script src="src/dependencies/jquery.min.js"></script>
+		<script src="src/dependencies/dat.gui.min.js"></script>
+		<!--<script src="dist/pickingtest.bundle.js"></script>-->
+		<script src="dist/network.bundle.js"></script>
+		<script src="tests/pickingtest.js"></script>
 	</body>
 </html>
