--- a/pickingtest.html
+++ b/pickingtest.html
@@ -6,6 +6,7 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+			div.dg { font-size: 16px; }
 		</style>
 	</head>
 	<body>
