slight fixes, changed intensity to line weight instead of transparency, and added index for github pages

--- a/stresstest.html
+++ b/stresstest.html
@@ -12,6 +12,7 @@
 
         <script src="src/dependencies/jquery.min.js"></script>
 		<script src="src/dependencies/dat.gui.min.js"></script>
-		<script src="dist/stresstest.bundle.js"></script>
+		<script src="dist/network.bundle.js"></script>
+		<script src="./tests/stresstest.js"></script>
 	</body>
 </html>
