--- a/pickingtest.html
+++ b/pickingtest.html
@@ -3,14 +3,18 @@
 	<head>
 		<meta charset=utf-8>
 		<title>Selection buffer test</title>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-			div.dg { font-size: 16px; }
-		</style>
+		<link rel="stylesheet" href="./css/pickingtest.css">
 	</head>
 	<body>
-
+		<div id="canvas"></div>
+		<div id="options">
+			<h2>Shader Options</h1>
+			<ul>
+				<li id="LINE_CLIP_SPACE">Line shader: screen space - </li>
+				<li id="LINE_FAKE_DEPTH" class="selected">Line shader: fake depth - </li>
+				<li id="NODE_FAKE_DEPTH" class="selected">Node shader: fake depth - </li>
+			</ul>
+		</div>		
         <script src="src/dependencies/jquery.min.js"></script>
 		<script src="src/dependencies/dat.gui.min.js"></script>
 		<!--<script src="dist/pickingtest.bundle.js"></script>-->
