--- a/stresstest.html
+++ b/stresstest.html
@@ -3,16 +3,26 @@
 	<head>
 		<meta charset=utf-8>
 		<title>Stress test</title>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
+		<link rel="stylesheet" href="./css/stresstest.css">
 	</head>
 	<body>
+		<div id="canvas"></div>
+		<div id="options">
+			<h2>Options</h1>
+			<ul>
+				<li id="LINE_CLIP_SPACE">Line shader: screen space - </li>
+				<li id="LINE_FAKE_DEPTH" class="selected">Line shader: fake depth - </li>
+				<li id="NODE_FAKE_DEPTH" class="selected">Node shader: fake depth - </li>
+				<li id="DISPLAY_NODES" class="selected">Display nodes - </li>
+				<li id="DISPLAY_EDGES" class="selected">Display edges - </li>
+			</ul>
+		</div>
 		<script src="./stats.min.js"></script>
 		<script>
 			var stats = new Stats();
 			document.body.appendChild( stats.dom );
+			stats.dom.style.right = "20%";
+			stats.dom.style.left = "";
 
 			function loop() {
 				stats.update();
