--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <div class="p25">
             <h2><p>Tests</p></h2>
             <ul id="examples">
-                <li><a href="./pickingtest.html">Picking test</a></li>
-                <li><a href="./stresstest.html">Stress test</a></li>        
+                <li><a href="./pickingtest.html">Selection buffer test</a></li>
+                <li><a href="./stresstest.html">Stress test</a></li>
+                <li><a href="./datatest.html">Data selection test</a></li>
             </ul>        
         </div>
     </body>
