some folder organization

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <div class="p25">
             <h2><p>Tests</p></h2>
             <ul id="examples">
-                <li><a href="./pickingtest.html">Selection buffer test</a></li>
-                <li><a href="./stresstest.html">Stress test</a></li>
-                <li><a href="./datatest.html">Data selection test</a></li>
+                <li><a href="./tests/pickingtest.html">Selection buffer test</a></li>
+                <li><a href="./tests/stresstest.html">Stress test</a></li>
+                <li><a href="./tests/datatest.html">Data selection test</a></li>
+                <li><a href="./tests/combinationtest.html">Combination test</a></li>
             </ul>        
         </div>
     </body>
