--- a/tests/pickingtest.html
+++ b/tests/pickingtest.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset=utf-8>
 		<title>Selection buffer test</title>
-		<link rel="stylesheet" href="./css/pickingtest.css">
+		<link rel="stylesheet" href="../css/pickingtest.css">
 	</head>
 	<body>
 		<div id="canvas"></div>
@@ -15,10 +15,10 @@
 				<li id="NODE_FAKE_DEPTH" class="selected">Node shader: fake depth - </li>
 			</ul>
 		</div>		
-        <script src="src/dependencies/jquery.min.js"></script>
-		<script src="src/dependencies/dat.gui.min.js"></script>
+        <script src="../src/dependencies/jquery.min.js"></script>
+		<script src="../src/dependencies/dat.gui.min.js"></script>
 		<!--<script src="dist/pickingtest.bundle.js"></script>-->
-		<script src="dist/network.bundle.js"></script>
-		<script src="tests/pickingtest.js"></script>
+		<script src="../dist/network.bundle.js"></script>
+		<script src="./pickingtest.js"></script>
 	</body>
 </html>
