added node/edge scale options

--- a/tests/combinationtest.html
+++ b/tests/combinationtest.html
@@ -43,6 +43,20 @@
 					</p>
 					<div id="intensity-sign" style="margin: 0 5%"></div>
 				</li>
+				<li>
+					<p>
+						<label for="node-scale-label">Node scale:</label>
+						<input type="text" id="node-scale-label" readonly style="border:none;">
+					</p>
+					<div id="node-scale" style="margin: 0 5%"></div>
+				</li>
+				<li>
+					<p>
+						<label for="edge-scale-label">Edge scale:</label>
+						<input type="text" id="edge-scale-label" readonly style="border:none;">
+					</p>
+					<div id="edge-scale" style="margin: 0 5%"></div>
+				</li>
 			</ul>
 		</div>
 		<script src="../src/dependencies/stats.min.js"></script>
