changed sphere shader to be camera space instead of clip space (why was I using clip space in the first place?) and added gaiatest using closest 100k stars

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <li><a href="./tests/stresstest.html">Stress test</a></li>
                 <li><a href="./tests/datatest.html">Data selection test</a></li>
                 <li><a href="./tests/combinationtest.html">Combination test</a></li>
+                <li><a href="./tests/gaiatest.html">Gaia data release test</a></li>
             </ul>        
         </div>
     </body>
