--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <li><a href="./tests/datatest.html">Data selection test</a></li>
                 <li><a href="./tests/combinationtest.html">Combination test</a></li>
                 <li><a href="./tests/gaiatest.html">Gaia data release test</a></li>
+                <li><a href="./tests/testing.html">Experimental shader test</a></li>
             </ul>        
         </div>
     </body>
