--- a/todo.html
+++ b/todo.html
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
 TODO:
-update buffer attributes to use needsUpdate and setting using array, etc. Should help with optimization and reducing number of buffer update calls DONE
-add method to get connected nodes/edges
-=======
-TODO:
-update buffer attributes to use needsUpdate and setting using array, etc. Should help with optimization and reducing number of buffer update calls DONE
-add method to get connected nodes/edges
->>>>>>> 7f3dc12d4437749b57dac1f1c44350a9d686daa8
+Correct depth buffer modification
+use glPoints for spheres - in progress
+possibly move computation to async helper
