--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li><a href="./tests/combinationtest.html">Combination test</a></li>
                 <li><a href="./tests/gaiatest.html">Gaia data release test</a></li>
                 <li><a href="./tests/testing.html">Experimental shader test</a></li>
+                <li><a href="./tests/placesCNNtest.html">PlacesCNN test</a></li>
             </ul>        
         </div>
     </body>
